[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,20 @@
 <html>
+    <head>
+        <title>Article One | Vignesh Hegde</title>
+    </head>
+    <body>
+        <div>
+            <a href='/'>Home</a>
+        </div>
+        <h3>My Profile</h3>
+        <div>
+            August 6,2017
+        </div>
+        <div>
+            A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+        </div>
+        <div>
+            A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+        </div>
+    </body>
 </html>
