[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,13 +8,15 @@
         </div>
         <h3>My Profile</h3>
         <div>
-            August 6,2017
+            <p>August 6,2017</p>
         </div>
         <div>
-            A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+           <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+           </p>
         </div>
         <div>
-            A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+            <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+           </p> 
         </div>
     </body>
 </html>
