[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,24 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Article Two | Vignesh Hegde</title>
+        <meta name="viewport" content="width=device-width. intial-scale=1">
+    </head>
+    <body>
+        <div>
+            <a href='/'>Home</a>
+        </div>
+        <h3>My Profile</h3>
+        <div>
+            <p>August 7,2017</p>
+        </div>
+        <div>
+           <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+           </p>
+        </div>
+        <div>
+            <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+           </p> 
+        </div>
+    </body>
 </html>
