[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,22 +3,33 @@
     <head>
         <title>Article One | Vignesh Hegde</title>
         <meta name="viewport" content="width=device-width. intial-scale=1">
+        <style>
+        .container{
+            max-width=800px;
+            margin:0 auto;
+            color:grey;
+            font-family:comic-sans;
+        }
+        
+        </style>
     </head>
     <body>
-        <div>
-            <a href='/'>Home</a>
-        </div>
-        <h3>My Profile</h3>
-        <div>
-            <p>August 6,2017</p>
-        </div>
-        <div>
-           <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
-           </p>
-        </div>
-        <div>
-            <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
-           </p> 
+        <div class="container">
+            <div>
+                <a href='/'>Home</a>
+            </div>
+            <h3>My Profile</h3>
+            <div>
+                <p>August 6,2017</p>
+            </div>
+            <div>
+               <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+               </p>
+            </div>
+            <div>
+                <p> A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me.  A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. A simple profile which is not so highfy but wish to explore and grow and contribute to the betterment of the organisation and environment around me. 
+               </p> 
+            </div>
         </div>
     </body>
 </html>
