[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,15 +3,7 @@
     <head>
         <title>Article One | Vignesh Hegde</title>
         <meta name="viewport" content="width=device-width. intial-scale=1">
-        <style>
-        .container{
-            max-width=800px;
-            margin:0 auto;
-            color:grey;
-            font-family:comic-sans;
-        }
-        
-        </style>
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
