--- a/ui/index.html
+++ b/ui/index.html
@@ -8,10 +8,11 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main-text'class="center text-big bold">
             Hi! I am Viggi, this is my first webapp!.
         <h4>This is a new heading to this app!</h4>
         </div>
+        <script>alert('Hi I\'m Javascript')</script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
