[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,22 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div id='madi' class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://lh3.googleusercontent.com/-LWSL76jgZYI/WX3UA2EV_cI/AAAAAAAAXLI/0d5Yl5NqUDE3k0bfGbv53h9p67s_XlszwCEwYBhgL/w93-h140-p/DSC_0710.JPG" class="img-medium"/>
         </div>
         <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am Viggi, this is my first webapp!.
-        <h4>This is a new heading to this app!</h4>
+        <h3>Personal Information</h3>
+        <div>
+            <p>Name: Vignesh Hegde S</p>
         </div>
-        <script>alert('Hi I\'m Javascript')</script>
+        <hr/>
+        <h3>Professional Information</h3>
+        <div>
+            <p>I am currently working in DXC Technology</p>
+        </div>
+        <hr/>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
