--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,7 @@
             <p>I am currently working in DXC Technology</p>
         </div>
         <hr/>
+        <div class="footer"></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
