--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,9 @@
             <p>I am currently working in DXC Technology</p>
         </div>
         <hr/>
-        <div class="footer"></div>
+        <div class="footer">
+            This Button <button id="counter">Click Me!</button> is clicked <span id="count">0 times</span>
+        </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
