--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,14 @@
         <hr/>
         <div class="footer">
             This Button <button id='counter'>Click Me!</button> is clicked <span id='count'>0</span> times.
+            <hr/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="button" id="butn_id" value="Submit"></input>
+            <ul>
+                <li>name1</li>
+                <li>name1</li>
+                <li>name1</li>
+            </ul>
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
