[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,11 +23,8 @@
             This Button <button id='counter'>Click Me!</button> is clicked <span id='count'>0</span> times.
             <hr/>
             <input type="text" id="name" placeholder="name"></input>
-            <input type="button" id="butn_id" value="Submit"></input>
-            <ul>
-                <li>name1</li>
-                <li>name1</li>
-                <li>name1</li>
+            <input type="button" id="butn_id" value="submit_btn"></input>
+            <ul id="namelist">
             </ul>
         </div>
         </div>
