--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
             This Button <button id='counter'>Click Me!</button> is clicked <span id='count'>0</span> times.
             <hr/>
             <input type="text" id="name" placeholder="name"></input>
-            <input type="button" id="butn_id" value="submit_btn"></input>
+            <input type="button" id="submit_btn" value="Submit"></input>
             <ul id="namelist">
             </ul>
         </div>
