[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,13 +19,13 @@
             <p>I am currently working in DXC Technology</p>
         </div>
         <hr/>
+        <h3>Login to unlock the awesome features</h3>
+        <div>
+            <input type="text" id="username" placeholder="username"/>
+            <input type="password" id="password"/>
+            <input type="submit" id="submit_btn"/>
+        </div>
         <div class="footer">
-            This Button <button id='counter'>Click Me!</button> is clicked <span id='count'>0</span> times.
-            <hr/>
-            <input type="text" id="name" placeholder="name"></input>
-            <input type="button" id="submit_btn" value="Submit"></input>
-            <ul id="namelist">
-            </ul>
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
